k8-manifests/qa/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: qa
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
    - name: http
      port: 80
      targetPort: http
